[gd_scene load_steps=3 format=3 uid="uid://b1bxw4amdf8ns"]

[ext_resource type="Script" path="res://v1/Matches/ConnectedMatch.gd" id="1_i86vk"]
[ext_resource type="PackedScene" uid="uid://dh54pmbtdvbjt" path="res://v1/Matches/MatchDisplay.tscn" id="2_doejd"]

[node name="ConnectedMatch" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i86vk")

[node name="Display" parent="." instance=ExtResource("2_doejd")]
unique_name_in_owner = true
layout_mode = 1

[node name="Windows" type="Node" parent="."]

[node name="ManualResponseWindow" type="Window" parent="Windows"]
unique_name_in_owner = true
position = Vector2i(326, 124)
size = Vector2i(500, 400)
always_on_top = true

[node name="MarginContainer" type="MarginContainer" parent="Windows/ManualResponseWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Windows/ManualResponseWindow/MarginContainer"]
layout_mode = 2

[node name="HintLabel" type="Label" parent="Windows/ManualResponseWindow/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "HINT HERE"

[node name="RequestLabel" type="Label" parent="Windows/ManualResponseWindow/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "REQUEST HERE"

[node name="HBoxContainer" type="HBoxContainer" parent="Windows/ManualResponseWindow/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ResponseEdit" type="LineEdit" parent="Windows/ManualResponseWindow/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter response"

[node name="SendButton" type="Button" parent="Windows/ManualResponseWindow/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = " Send "

[node name="OptionsDisplay" type="TextEdit" parent="Windows/ManualResponseWindow/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "OPTIONS HERE"
editable = false

[connection signal="pressed" from="Windows/ManualResponseWindow/MarginContainer/VBoxContainer/HBoxContainer/SendButton" to="." method="_on_send_button_pressed"]
